[package]
name = "ip-geolocator"
version = "0.1.0"
edition = "2024"

[dependencies]
maxminddb = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
dotenv = "0.15.0"
memmap = "0.7.0"
lru = "0.13.0"
axum = "0.8.1"
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["gzip"] }
flate2 = "1.0"
tar = "0.4"
thiserror = "1.0"
